--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,9 @@ description: A noob programmer
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Projects: "projects"
-  Author's home: "http://deanattali.com"
+  CV: "CV.pdf"
+  #Projects: "projects"
+  #Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
