--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ author:
 social-network-links:
   #rss: true
   email: "usedtobe@sjtu.edu.cn"
-  facebook: tianzhe.wang.79
+  facebook: usedtobe97
 #  github: daattali
 #  twitter: daattali
 #  reddit: yourname
